# RETINA

./: Cargo.toml  README.md  pyproject.toml  run_manual_parallel_test.sh  run_manual_test.sh
.github/workflows/: benchmarks.yml
.kilo/plans/: 1774020115513-witty-plan.md
benches/: acceleration.rs  async_bridge.rs  cubecl_vs_wgpu.rs  cv_benchmarks.rs  normals.rs  pipeline_3d.rs
core/: Cargo.toml
core/src/: tensor.rs
core/tests/: nalgebra_adapter_tests.rs
crates/3d/: Cargo.toml
crates/3d/src/: hidden_point_removal.rs  lib.rs  normals.rs  visibility.rs
crates/3d/src/gpu/: mod.rs  point_cloud.rs
crates/3d/src/mesh/: processing.rs  reconstruction.rs
crates/3d/src/spatial/: bvh.rs  mod.rs
crates/3d/tests/: functional_tests.rs  perf_profiling.rs  verify_normals.rs
crates/runtime/: BEHAVIOUR.md  Cargo.toml
crates/runtime/src/: device_registry.rs  lib.rs  memory.rs  memory_manager.rs  orchestrator.rs
crates/runtime/src/distributed/: mod.rs  shared_memory.rs
crates/runtime/src/observe/: events.rs  layer.rs  mod.rs
crates/runtime/src/pipeline/: allocator.rs  fusion.rs  handle.rs  mod.rs
crates/runtime/tests/: cpu_fallback_tests.rs  disjoint_threads.rs  error_propagation_tests.rs  execution_mode_tests.rs  fusion_tests.rs  gpu_detection_test.rs  helpers.rs  interleaved_gpu_cpu.rs  orchestrator_perf_tests.rs  pipeline_execution_tests.rs  property_tests.rs  runtime_runner_tests.rs  scheduler_group_tests.rs  stress_tests.rs  vram_budgeting.rs
python_examples/: manual_proc_a.py  manual_proc_a_parallel.py  manual_proc_b.py  manual_proc_b_parallel.py  run_concurrent_stress.py  stress_test_orchestrator.py
scientific/: Cargo.toml
tests/: multi_gpu_tests.rs
(+139 files in other folders)
